// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parsePrivateApiBalance > complete scenarios > should match snapshot for Bitcoin balance 1`] = `
{
  "balanceBigInt": 50000000n,
  "balanceString": "50000000",
  "chain": "BTC",
  "nodeId": "btc-mainnet-1",
  "raw": undefined,
  "unit": "satoshi",
}
`;

exports[`parsePrivateApiBalance > complete scenarios > should match snapshot for Ethereum balance with raw data 1`] = `
{
  "balanceBigInt": 1500000000000000000n,
  "balanceString": "1500000000000000000",
  "chain": "ETH",
  "nodeId": "eth-mainnet-2",
  "raw": {
    "blockNumber": 18000000,
    "gasPrice": "20000000000",
  },
  "unit": "wei",
}
`;

exports[`parsePrivateApiBalance > valid responses > should include nodeId when provided 1`] = `
{
  "balanceBigInt": 50000000n,
  "balanceString": "50000000",
  "chain": "BTC",
  "nodeId": "node-123",
  "raw": undefined,
  "unit": "satoshi",
}
`;

exports[`parsePrivateApiBalance > valid responses > should include raw data when provided 1`] = `
{
  "balanceBigInt": 5000000000n,
  "balanceString": "5000000000",
  "chain": "SOL",
  "nodeId": undefined,
  "raw": {
    "blockHeight": 12345,
    "timestamp": 1234567890,
  },
  "unit": "lamports",
}
`;

exports[`parsePrivateApiBalance > valid responses > should parse numeric balance correctly 1`] = `
{
  "balanceBigInt": 100000000n,
  "balanceString": "100000000",
  "chain": "BTC",
  "nodeId": undefined,
  "raw": undefined,
  "unit": "satoshi",
}
`;

exports[`parsePrivateApiBalance > valid responses > should parse string balance correctly 1`] = `
{
  "balanceBigInt": 1000000000000000000n,
  "balanceString": "1000000000000000000",
  "chain": "ETH",
  "nodeId": undefined,
  "raw": undefined,
  "unit": "wei",
}
`;
